--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CSS Kitten Wheelbarrow</title>
+  <title>CSS Pirate Gems</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/gems.css">
 </head>
